--- a/3sem/cw-it/css/style_titres.css
+++ b/3sem/cw-it/css/style_titres.css
@@ -5,7 +5,7 @@ html {
 
 .titres_body {
     background-image: url("../icons/bgs/bg4.jpg");
-    background-color: rgb(99, 87, 87);
+    background-color: rgb(56, 50, 50);
     background-blend-mode: multiply;
     background-position: center;
     background-repeat: no-repeat;
@@ -13,24 +13,107 @@ html {
     z-index: -1;
 }
 
-body {
-    background: black;
-    font-size: 40px;
-    color: white;
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    /* justify-content: center; */
-    align-items: center;
-    display: flex;
+.container {
+    width: 1800px;
+    text-align: center;
 }
 
-/* body {
-    background: #333;
-    padding-top: 5em;
-    display: flex;
-    justify-content: center;
-} */
+.nav-item {
+    padding: 3px;
+    text-transform: Uppercase;
+    margin-bottom: .5em;
+    display: inline-block;
+}
+
+.nav-link {
+    text-align: center;
+    display: block;
+    line-height: 50px;
+    width: 200px;
+    font-size: 17px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: rgb(170, 74, 194);
+    letter-spacing: .15em;
+    text-decoration: none;
+    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.5);
+
+    background: #7e929b;
+    border: 1px solid;
+    border-color: #762cd8 #762cd8 #762cd8;
+    border-radius: 3px;
+    background-image: url(../icons/bgs/button.jpg);
+}
+
+.nav-link:hover {
+    background: #a8bdc7;
+    border-color: #e3eaed #d3dee3 #cedadf;
+    background-image: -webkit-linear-gradient(top, #cfdae0, #b5c7cf 50%, #a6bac5 51%, #aec1ca);
+    background-image: -moz-linear-gradient(top, #cfdae0, #b5c7cf 50%, #a6bac5 51%, #aec1ca);
+    background-image: -o-linear-gradient(top, #cfdae0, #b5c7cf 50%, #a6bac5 51%, #aec1ca);
+    background-image: linear-gradient(top bottom, #cfdae0, #b5c7cf 50%, #a6bac5 51%, #aec1ca);
+    font-size: 19px;
+    font-weight: bold;
+    text-transform: uppercase;
+    position: relative;
+    text-shadow: 0.05em 0 0 #00fffc, -0.03em -0.04em 0 #fc00ff,
+        0.025em 0.04em 0 #fffc00;
+    animation: glitch 725ms infinite;
+}
+
+.cinemas {
+    text-align: center;
+    width: 100%;
+    margin: 0px auto;
+    color: #be98be;
+    font-size: 80px;
+    letter-spacing: 5px;
+    top: 50%;
+    margin-top: 2%;
+
+    text-shadow: -1px -1px 0px #804281,
+        3px 3px 0px #744075,
+        6px 6px 0px #7f69bb;
+}
+
+.table_cinemas {
+    text-align: center;
+}
+
+.item_table_cinemas {
+    padding: 3px;
+    text-transform: Uppercase;
+    margin-bottom: .5em;
+    display: inline-block;
+}
+
+.text_table_cinemas {
+    text-align: center;
+    display: block;
+    line-height: 50px;
+    height: 80px;
+    font-size: 40px;
+    font-family: Verdana;
+    color: rgb(56, 138, 63);
+    letter-spacing: .15em;
+    text-decoration: none;
+    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.5);
+}
+
+.text_table_cinemas:hover {
+    background: #a8bdc7;
+    border-color: #e3eaed #d3dee3 #cedadf;
+    background-image: -webkit-linear-gradient(top, #1f9de0, #8fbdd1 50%, #7685b6 51%, #aec1ca);
+    background-image: -moz-linear-gradient(top, #1f9de0, #8fbdd1 50%, #7685b6 51%, #aec1ca);
+    background-image: -o-linear-gradient(top, #1f9de0, #8fbdd1 50%, #7685b6 51%, #aec1ca);
+    background-image: linear-gradient(top bottom, #1f9de0, #8fbdd1 50%, #7685b6 51%, #aec1ca);
+    font-size: 40px;
+    font-weight: bold;
+    text-transform: uppercase;
+    position: relative;
+    text-shadow: 0.05em 0 0 #00fffc, -0.03em -0.04em 0 #fc00ff,
+        0.025em 0.04em 0 #fffc00;
+    animation: glitch 725ms infinite;
+}
 
 .typewriter h1 {
     color: #fff;
@@ -39,7 +122,7 @@ body {
     border-right: .15em solid orange;
     white-space: nowrap;
     margin: 0 auto;
-    letter-spacing: .15em;
+    /* letter-spacing: .15em; */
     animation:
         typing 3.5s steps(30, end),
         blink-caret .5s step-end infinite;
