--- a/7sem/web/lab-3/Views/Home/Index.cshtml
+++ b/7sem/web/lab-3/Views/Home/Index.cshtml
@@ -1,10 +1,12 @@
 ﻿@model lab_3.Models.HomeViewModel
 
-<h2>Dashboard</h2>
-
-<h3>Projects</h3>
+<h5>Projects</h5>
 <table>
     <thead>
+        <style>
+            table {border-collapse: collapse;}
+            th, td {border: 1px solid black; padding: 8px;}
+        </style>
         <tr>
             <th><a asp-action="Index" asp-route-sortOrder="name">Name</a></th>
             <th><a asp-action="Index" asp-route-sortOrder="customerCompany">Customer Company</a></th>
@@ -36,8 +38,9 @@
     </tbody>
 </table>
 <a href="@Url.Action("Create", "Projects")">Create</a>
+<br><br><br>
 
-<h3>Employees</h3>
+<h5>Employees</h5>
 <table>
     <thead>
         <tr>
@@ -65,8 +68,9 @@
     </tbody>
 </table>
 <a href="@Url.Action("Create", "Employees")">Create</a>
+<br><br><br>
 
-<h3>Tasks</h3>
+<h5>Tasks</h5>
 <table>
     <thead>
         <tr>
@@ -100,3 +104,4 @@
     </tbody>
 </table>
 <a href="@Url.Action("Create", "Tasks")">Create</a>
+<br><br><br>
